Roger: modificaciones a pagina Perfil

--- a/HTML/perfil.html
+++ b/HTML/perfil.html
@@ -46,7 +46,6 @@
     <div class="timeline">
         <div class="container left">
             <div class="date">Hoy</div>
-            <i class="icon"></i>
             <div class="content">
                 <h2>Bootcamp en aprender a escribir Hola Mundo</h2>
                 <h3>Cuenca, Cuenca, ClM, España</h3>
@@ -55,11 +54,19 @@
         </div>
         <div class="container right">
             <div class="date">14/06/2020 - 27/03/2021</div>
-            <i class="icon"></i>
             <div class="content">
                 <h2>Grado Universitario en poner cosas a la izq</h2>
                 <h3>Madrid, Madrid, Madrid, España</h3>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut ipsam dolorum officiis voluptas eaque. Ut dolor ea nam culpa repellat inventore nemo recusandae quasi ratione quidem, asperiores, aspernatur quibusdam eum.</p>
+            </div>
+        </div>
+        <div class="container left">
+            <div class="date">Hoy</div>
+            <div class="content">
+                <h2>Bootcamp en aprender a escribir Hola Mundo</h2>
+                <h3>Cuenca, Cuenca, ClM, España</h3>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut ipsam dolorum officiis voluptas eaque. Ut dolor ea nam culpa repellat inventore nemo recusandae quasi ratione quidem, asperiores, aspernatur quibusdam eum.</p>
+            </div>
         </div>
     </div>
     </div>
