Roger: añadiendo timeline futura a pagina Perfil

--- a/HTML/perfil.html
+++ b/HTML/perfil.html
@@ -60,6 +60,8 @@
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut ipsam dolorum officiis voluptas eaque. Ut dolor ea nam culpa repellat inventore nemo recusandae quasi ratione quidem, asperiores, aspernatur quibusdam eum.</p>
             </div>
         </div>
+    </div>
+    <div class="timeline2">
         <div class="container left">
             <div class="date">Hoy</div>
             <div class="content">
@@ -68,7 +70,14 @@
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut ipsam dolorum officiis voluptas eaque. Ut dolor ea nam culpa repellat inventore nemo recusandae quasi ratione quidem, asperiores, aspernatur quibusdam eum.</p>
             </div>
         </div>
-    </div>
+        <div class="container right">
+            <div class="date">14/06/2020 - 27/03/2021</div>
+            <div class="content">
+                <h2>Grado Universitario en poner cosas a la izq</h2>
+                <h3>Madrid, Madrid, Madrid, España</h3>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut ipsam dolorum officiis voluptas eaque. Ut dolor ea nam culpa repellat inventore nemo recusandae quasi ratione quidem, asperiores, aspernatur quibusdam eum.</p>
+            </div>
+        </div>
     </div>
 </body>
 </html>
