--- a/HTML/perfil.html
+++ b/HTML/perfil.html
@@ -57,11 +57,31 @@
             <div class="content">
                 <h2>Grado Universitario en poner cosas a la izq</h2>
                 <h3>Madrid, Madrid, Madrid, España</h3>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut ipsam dolorum officiis voluptas eaque. Ut dolor ea nam culpa repellat inventore nemo recusandae quasi ratione quidem, asperiores, aspernatur quibusdam eum.
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laborum, magni temporibus cupiditate dignissimos culpa tempore esse deserunt omnis. Amet velit reprehenderit unde odio incidunt esse sequi recusandae aliquam at officia.
+                </p>
+            </div>
+        </div>
+    </div>
+    <div class="timeline_c">
+        <div class="container left">
+            <div class="date">Cursando Actualmente</div>
+            <div class="content">
+                <h2>Bootcamp en aprender a escribir Hola Mundo</h2>
+                <h3>Cuenca, Cuenca, ClM, España</h3>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut ipsam dolorum officiis voluptas eaque. Ut dolor ea nam culpa repellat inventore nemo recusandae quasi ratione quidem, asperiores, aspernatur quibusdam eum.</p>
+            </div>
+        </div>
+        <div class="container right">
+            <div class="date">Cursando Actualmente</div>
+            <div class="content">
+                <h2>Grado Universitario en poner cosas a la izq</h2>
+                <h3>Madrid, Madrid, Madrid, España</h3>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut ipsam dolorum officiis voluptas eaque. Ut dolor ea nam culpa repellat inventore nemo recusandae quasi ratione quidem, asperiores, aspernatur quibusdam eum.</p>
             </div>
         </div>
     </div>
-    <div class="timeline2">
+    <div class="timeline_f">
         <div class="container left">
             <div class="date">Hoy</div>
             <div class="content">
