Animacion aplicada a perfil

--- a/HTML/perfil.html
+++ b/HTML/perfil.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>YourPath</title>
     <link rel="stylesheet" href="../CSS/perfil.css">
+    <link rel="shortcut icon" href="#">
 </head>
 <body>
     <nav class="navbar">
@@ -43,7 +44,8 @@
     <div class="triangulo">
 
     </div>
-    <div class="timeline">
+    <div id="timeline">
+        <!-- 
         <div class="container left">
             <div class="date">Hoy</div>
             <div class="content">
@@ -62,8 +64,10 @@
                 </p>
             </div>
         </div>
+        -->
     </div>
-    <div class="timeline_c">
+    <div id="timeline_c">
+        <!--
         <div class="container left">
             <div class="date">Cursando Actualmente</div>
             <div class="content">
@@ -80,8 +84,10 @@
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut ipsam dolorum officiis voluptas eaque. Ut dolor ea nam culpa repellat inventore nemo recusandae quasi ratione quidem, asperiores, aspernatur quibusdam eum.</p>
             </div>
         </div>
+        -->
     </div>
-    <div class="timeline_f">
+    <div id="timeline_f">
+        <!--
         <div class="container left">
             <div class="date">Hoy</div>
             <div class="content">
@@ -98,6 +104,10 @@
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut ipsam dolorum officiis voluptas eaque. Ut dolor ea nam culpa repellat inventore nemo recusandae quasi ratione quidem, asperiores, aspernatur quibusdam eum.</p>
             </div>
         </div>
+        -->
     </div>
+    <script src="https://code.jquery.com/jquery-3.6.1.min.js"
+        integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
+    <script src="../JavaScript/PathGeneratorAnimation.js"></script>
 </body>
 </html>
