Divs de ejemplo eliminados

--- a/HTML/perfil.html
+++ b/HTML/perfil.html
@@ -41,71 +41,10 @@
             </ul>
         </div>
     </div>
-    <div class="triangulo">
-
-    </div>
-    <div id="timeline">
-        <!-- 
-        <div class="container left">
-            <div class="date">Hoy</div>
-            <div class="content">
-                <h2>Bootcamp en aprender a escribir Hola Mundo</h2>
-                <h3>Cuenca, Cuenca, ClM, España</h3>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut ipsam dolorum officiis voluptas eaque. Ut dolor ea nam culpa repellat inventore nemo recusandae quasi ratione quidem, asperiores, aspernatur quibusdam eum.</p>
-            </div>
-        </div>
-        <div class="container right">
-            <div class="date">14/06/2020 - 27/03/2021</div>
-            <div class="content">
-                <h2>Grado Universitario en poner cosas a la izq</h2>
-                <h3>Madrid, Madrid, Madrid, España</h3>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut ipsam dolorum officiis voluptas eaque. Ut dolor ea nam culpa repellat inventore nemo recusandae quasi ratione quidem, asperiores, aspernatur quibusdam eum.
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laborum, magni temporibus cupiditate dignissimos culpa tempore esse deserunt omnis. Amet velit reprehenderit unde odio incidunt esse sequi recusandae aliquam at officia.
-                </p>
-            </div>
-        </div>
-        -->
-    </div>
-    <div id="timeline_c">
-        <!--
-        <div class="container left">
-            <div class="date">Cursando Actualmente</div>
-            <div class="content">
-                <h2>Bootcamp en aprender a escribir Hola Mundo</h2>
-                <h3>Cuenca, Cuenca, ClM, España</h3>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut ipsam dolorum officiis voluptas eaque. Ut dolor ea nam culpa repellat inventore nemo recusandae quasi ratione quidem, asperiores, aspernatur quibusdam eum.</p>
-            </div>
-        </div>
-        <div class="container right">
-            <div class="date">Cursando Actualmente</div>
-            <div class="content">
-                <h2>Grado Universitario en poner cosas a la izq</h2>
-                <h3>Madrid, Madrid, Madrid, España</h3>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut ipsam dolorum officiis voluptas eaque. Ut dolor ea nam culpa repellat inventore nemo recusandae quasi ratione quidem, asperiores, aspernatur quibusdam eum.</p>
-            </div>
-        </div>
-        -->
-    </div>
-    <div id="timeline_f">
-        <!--
-        <div class="container left">
-            <div class="date">Hoy</div>
-            <div class="content">
-                <h2>Bootcamp en aprender a escribir Hola Mundo</h2>
-                <h3>Cuenca, Cuenca, ClM, España</h3>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut ipsam dolorum officiis voluptas eaque. Ut dolor ea nam culpa repellat inventore nemo recusandae quasi ratione quidem, asperiores, aspernatur quibusdam eum.</p>
-            </div>
-        </div>
-        <div class="container right">
-            <div class="date">14/06/2020 - 27/03/2021</div>
-            <div class="content">
-                <h2>Grado Universitario en poner cosas a la izq</h2>
-                <h3>Madrid, Madrid, Madrid, España</h3>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut ipsam dolorum officiis voluptas eaque. Ut dolor ea nam culpa repellat inventore nemo recusandae quasi ratione quidem, asperiores, aspernatur quibusdam eum.</p>
-            </div>
-        </div>
-        -->
-    </div>
+    <div class="triangulo"></div>
+    <div id="timeline"></div>
+    <div id="timeline_c"></div>
+    <div id="timeline_f"></div>
     <script src="https://code.jquery.com/jquery-3.6.1.min.js"
         integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
     <script src="../JavaScript/PathGeneratorAnimation.js"></script>
