--- a/HTML/perfil.html
+++ b/HTML/perfil.html
@@ -19,7 +19,7 @@
         </div>
         <div class="perfil_logo">
             <div class="img_logo"></div>
-            <div class="usuario">Nombre Apeliido Apellido</div>
+            <div class="usuario lineUp"></div>
         </div>
     </nav>
     <div class="perfil">
