--- a/HTML/perfil.html
+++ b/HTML/perfil.html
@@ -47,6 +47,8 @@
     <div id="timeline_f"></div>
     <script src="https://code.jquery.com/jquery-3.6.1.min.js"
         integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
-    <script src="../JavaScript/PathGeneratorAnimation.js"></script>
+    <script type="module" src="../JavaScript/Modules/PathContentGenerator.js"></script>
+    <script type="module" src="../JavaScript/Modules/PathAnimation.js"></script>
+    <script type="module" src="../JavaScript/PathGeneratorAnimation.js"></script>
 </body>
 </html>
