Encriptacion completada y Login checkaout

--- a/HTML/login.html
+++ b/HTML/login.html
@@ -14,7 +14,7 @@
           <h2>YourPath</h2>
           <div class="underline-title"></div>
         </div>
-        <form method="post" class="form">
+        <form class="form">
           <label for="user-email" style="padding-top: 13px">
             &nbsp;Email
           </label>
@@ -41,7 +41,7 @@
           <a href="#">
             <legend id="forgot-pass">Forgot password?</legend>
           </a>
-          <input id="submit-btn" type="submit" name="submit" value="LOG IN" />
+          <input id="submit-btn" type="button" name="submit" value="LOG IN" />
         </form>
         <div class="separador">
             <div class="separador-content">
@@ -74,5 +74,9 @@
         </form>
       </div>
     </div>
+    <script src="https://code.jquery.com/jquery-3.6.1.min.js"
+        integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
+    <script type="module" src="../JavaScript/Test.js"></script>
+    <script type="module" src="../JavaScript/Modules/EncryptModule.js"></script>
   </body>
 </html>
