--- a/HTML/editarPerfil.html
+++ b/HTML/editarPerfil.html
@@ -27,28 +27,29 @@
     <div class="timeline">
         <div class="container">
             <form class="form">
-                <p>Añadir punto</p>
-                <label for="titulo">Como se llama?</label><br>
+                <h2>Añadir punto en el camino</h2>
+                <label for="titulo">¿Cómo quieres titular esta parada en tu path?</label><br>
                 <input type="text" id="titulo" name="titulo" placeholder="Ej. Coding Bootcamp en Java & SQL"><br><br>
-                <label for="location">Donde se realiza?</label><br>
+                <label for="location">¿Dónde se realiza la parada?</label><br>
                 <input type="text" id="location" name="location" placeholder="Ej. Fundación Esplai"><br><br>
-                <label for="init_date">Cuando empezaste / planeas empezar?</label><br>
+                <label for="init_date">¿Cuándo inicia esta parada?</label><br>
                 <input type="month" id="init_date" name="init_date"><br><br>
-                <label for="end_date">Cuando finalizaste / planeas finalizar?</label><br>
+                <label for="end_date">¿Cuándo finaliza esta parada?</label><br>
                 <input type="month" id="end_date" name="end_date"><br><br>
-                <label for="description">Como es?</label><br>
-                <input type="text" id="description" name="description" placeholder="Ej. Aprendi a hacer un Hola Mundo muy feo">
+                <label for="description">¿Qué te ha aportado esta parada?</label><br>
+                <textarea id="description" name="description" rows="5" placeholder="Ej. Aprendí a hacer un Hola Mundo muy feo..."></textarea>
                 <p>Elige el estado: </p>
+                <input type="radio" id="state_done" name="state" value="done">
                 <label for="state_done">Terminado </label>
-                <input type="radio" id="sate_done" name="state" value="done">
+                <input type="radio" id="state_doing" name="state" value="doing">
                 <label for="state_doing">En curso </label>
-                <input type="radio" id="sate_doing" name="state" value="doing">
+                <input type="radio" id="state_todo" name="state" value="todo">
                 <label for="state_todo">Planeado </label>
-                <input type="radio" id="sate_todo" name="state" value="todo">
             </form>
         </div>
         <div class="container">
             <form class="form">
+                <h2>¿Quieres modificar o ñadir algún dato personal?</h2>
                 <label for="name">Como te llamas?</label><br>
                 <input type="text" id="name" name="name" placeholder="Ej. Juan"><br><br>
                 <label for="surname">Cuales son tus apellios?</label><br>
@@ -66,7 +67,7 @@
                 <label for="linkedin">LinkedIn:</label><br>
                 <input type="url" id="linkedin" name="linkedin" placeholder="https://www.linkedin.com/in/holamundo"><br><br>
                 <label for="git">GitHub:</label><br>
-                <input type="url" id="git" name="git"><br><br>
+                <input type="url" id="git" name="git" placeholder="https://www.github.com/in/holamundo"><br><br>
             </form>
         </div>
     </div>
