--- a/HTML/perfil.html
+++ b/HTML/perfil.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <nav class="navbar">
-        <div class="logo">LOGO</div>
+        <div class="logo">
+            <a href="#"><img src="../maquetacion/logo.png" alt=""></a>
+        </div>
         <div class="buscador">
             <form>
                 <input id="search" type="search" placeholder="Busca path..." autofocus required />
@@ -19,6 +21,14 @@
         <div class="perfil_logo">
             <div class="img_logo"></div>
             <div class="usuario">Nombre Apeliido Apellido</div>
+            <div class="dropdown">
+                <button>≡</button>
+                <div class="dropdown-content">
+                <a href="#">Mi perfil</a>
+                <a href="#">Editar perfil</a>
+                <a href="#">Cerrar sesión</a>
+                </div>
+              </div>
         </div>
     </nav>
     <div class="perfil">
@@ -34,10 +44,8 @@
             </ul>
         </div>
         <div class="redes">
-            <ul>
-                <li>LINKEDIN</li>
-                <li>GITHUB</li>
-            </ul>
+            <a href="#"><img src="https://play-lh.googleusercontent.com/kMofEFLjobZy_bCuaiDogzBcUT-dz3BBbOrIEjJ-hqOabjK8ieuevGe6wlTD15QzOqw" alt=""></a>
+            <a href="#"><img class="github" src="https://cdn-icons-png.flaticon.com/512/25/25231.png" alt=""></a>
         </div>
     </div>
     <div class="triangulo">
