ultimas modificaciones a Perfil y EditarPerfil

--- a/HTML/editarPerfil.html
+++ b/HTML/editarPerfil.html
@@ -10,7 +10,7 @@
 <body>
     <nav class="navbar">
         <div class="logo">
-            <a href="#"><img src="../maquetacion/logo.png" alt=""></a>
+            <a href="home.html"><img src="../maquetacion/logo.png" alt="YourPath"></a>
         </div>
         <div class="buscador">
             <form>
@@ -24,9 +24,9 @@
             <div class="dropdown">
                 <button>≡</button>
                 <div class="dropdown-content">
-                <a href="#">Mi perfil</a>
-                <a href="#">Editar perfil</a>
-                <a href="#">Cerrar sesión</a>
+                <a href="perfil.html">Mi perfil</a>
+                <a href="editarPerfil.html">Editar perfil</a>
+                <a href="login.html">Cerrar sesión</a>
                 </div>
               </div>
         </div>
@@ -61,7 +61,7 @@
         </div>
         <div class="container">
             <form class="form">
-                <h2>¿Quieres modificar o ñadir algún dato personal?</h2>
+                <h2>¿Quieres modificar o añadir algún dato personal?</h2>
                 <p><label for="name">¿Cómo te llamas?</label></p>
                 <input type="text" id="name" name="name" placeholder="Ej. Juan" maxlength="20">
                 <p><label for="surname">¿Cuáles son tus apellios?</label></p>
