--- a/HTML/perfil.html
+++ b/HTML/perfil.html
@@ -10,7 +10,7 @@
 <body>
     <nav class="navbar">
         <div class="logo">
-            <a href="#"><img src="../maquetacion/logo.png" alt=""></a>
+            <a href="home.html"><img src="../maquetacion/logo.png" alt="YourPath"></a>
         </div>
         <div class="buscador">
             <form>
@@ -24,9 +24,9 @@
             <div class="dropdown">
                 <button>≡</button>
                 <div class="dropdown-content">
-                <a href="#">Mi perfil</a>
-                <a href="#">Editar perfil</a>
-                <a href="#">Cerrar sesión</a>
+                <a href="perfil.html">Mi perfil</a>
+                <a href="editarPerfil.html">Editar perfil</a>
+                <a href="login.html">Cerrar sesión</a>
                 </div>
               </div>
         </div>
@@ -44,8 +44,12 @@
             </ul>
         </div>
         <div class="redes">
-            <a href="#"><img src="https://play-lh.googleusercontent.com/kMofEFLjobZy_bCuaiDogzBcUT-dz3BBbOrIEjJ-hqOabjK8ieuevGe6wlTD15QzOqw" alt=""></a>
-            <a href="#"><img class="github" src="https://cdn-icons-png.flaticon.com/512/25/25231.png" alt=""></a>
+            <div id="linkedin">
+                <a href="#"><img src="https://play-lh.googleusercontent.com/kMofEFLjobZy_bCuaiDogzBcUT-dz3BBbOrIEjJ-hqOabjK8ieuevGe6wlTD15QzOqw" alt=""></a>
+            </div>
+            <div id="github">
+                <a href="#"><img class="github_img" src="https://cdn-icons-png.flaticon.com/512/25/25231.png" alt=""></a>
+            </div>
         </div>
     </div>
     <div class="triangulo">
