--- a/HTML/test.html
+++ b/HTML/test.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,9 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <input id="submit-btn" type="submit" name="submit" value="LOG IN" />
-    <input id="submit-btn" type="submit" name="submit" value="LOG IN" />
-    <script type="module" src="../JavaScript/Test.js"></script>
-    <script type="module" src="../JavaScript/Modules/EncryptModule.js"></script>
+    <div id="app"></div>
+    <script src="../JavaScript/Modules/APIConsultor.js"></script>
 </body>
 </html>
