footers a todas las paginas

--- a/HTML/perfil.html
+++ b/HTML/perfil.html
@@ -7,6 +7,7 @@
     <title>YourPath</title>
     <link rel="stylesheet" href="../CSS/perfil.css">
     <link rel="shortcut icon" href="#">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"/>
 </head>
 <body>
     <nav class="navbar">
@@ -57,6 +58,17 @@
     <div id="timeline"></div>
     <div id="timeline_c"></div>
     <div id="timeline_f"></div>
+    <footer>
+        <div class="logo"><img src="../maquetacion/logo.png" alt="YourPath"></div>
+        <div class="follow"><p>Follow us   
+            <a href="#"><i class="fab fa-instagram"></i></a>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+            <a href="#"><i class="fab fa-linkedin"></i></a>
+            <a href="#"><i class="fab fa-youtube"></i></a>
+            <a href="#"><i class="fab fa-facebook-f"></i></a>
+        </p></div>
+        <div class="derechos"><p>© 2022 YourPath, S.A. Todos los derechos reservados en todo el mundo</p></div>
+    </footer>
     <script src="https://code.jquery.com/jquery-3.6.1.min.js"
         integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
     <script type="module" src="../JavaScript/Modules/PathContentGenerator.js"></script>
