--- a/HTML/editarPerfil.html
+++ b/HTML/editarPerfil.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>YourPath</title>
     <link rel="stylesheet" href="../CSS/editarPerfil.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"/>
 </head>
 <body>
     <nav class="navbar">
@@ -85,5 +86,16 @@
             </form>
         </div>
     </div>
+    <footer>
+        <div class="logo"><img src="../maquetacion/logo.png" alt="YourPath"></div>
+        <div class="follow"><p>Follow us   
+            <a href="#"><i class="fab fa-instagram"></i></a>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+            <a href="#"><i class="fab fa-linkedin"></i></a>
+            <a href="#"><i class="fab fa-youtube"></i></a>
+            <a href="#"><i class="fab fa-facebook-f"></i></a>
+        </p></div>
+        <div class="derechos"><p>© 2022 YourPath, S.A. Todos los derechos reservados en todo el mundo</p></div>
+    </footer>
 </body>
 </html>
