--- a/HTML/test.html
+++ b/HTML/test.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <div id="app"></div>
-    <script src="../JavaScript/Modules/APIConsultor.js"></script>
+    <script type="module" src="../JavaScript/Modules/APIConsultor.js"></script>
 </body>
 </html>
