modificaciones simples a editarPerfil, home y perfil

--- a/HTML/home.html
+++ b/HTML/home.html
@@ -33,7 +33,7 @@
     </div>
     <div class="info">
         <div class="infoq">
-            <div class="img_c"></div>
+            <div class="img_c"><img src="../maquetacion/home2.png" alt="Muestra tu camino"></div>
             <h3>¡Muestra tu camino al mundo!</h3>
             <ul>
                 <li>De donde vienes y como has llegado hasta aqui</li>
@@ -42,7 +42,7 @@
             </ul>
         </div>
         <div class="infoq">
-            <div class="img_c"></div>
+            <div class="img_c"><img src="../maquetacion/home1.png" alt="Inspírate"></div>
             <h3>¡Inspírate en otros caminos!</h3>
             <ul>
                 <li>Para llegar a una meta hay muchos caminos</li>
