--- a/HTML/perfil.html
+++ b/HTML/perfil.html
@@ -47,10 +47,10 @@
         </div>
         <div class="redes">
             <div id="linkedin">
-                <a href="#"><img src="https://play-lh.googleusercontent.com/kMofEFLjobZy_bCuaiDogzBcUT-dz3BBbOrIEjJ-hqOabjK8ieuevGe6wlTD15QzOqw" alt=""></a>
+                <a href="#"><i class="fab fa-linkedin"></i></a>
             </div>
             <div id="github">
-                <a href="#"><img class="github_img" src="https://cdn-icons-png.flaticon.com/512/25/25231.png" alt=""></a>
+                <a href="#"><i class="fab fa-github"></i></a>
             </div>
         </div>
     </div>
