--- a/HTML/perfil.html
+++ b/HTML/perfil.html
@@ -73,6 +73,7 @@
         integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
     <script type="module" src="../JavaScript/Modules/PathContentGenerator.js"></script>
     <script type="module" src="../JavaScript/Modules/PathAnimation.js"></script>
+    <script type="module" src="../JavaScript/Modules/APIConsultor.js"></script>
     <script type="module" src="../JavaScript/PathUsefulness.js"></script>
 </body>
 </html>
