los buttons con id

--- a/HTML/editarPerfil.html
+++ b/HTML/editarPerfil.html
@@ -47,8 +47,8 @@
                 <input type="month" id="init_date" name="init_date" required>
                 <p><label for="end_date">¿Cuándo finaliza esta parada?</label></p>
                 <input type="month" id="end_date" name="end_date">
-                <p><label for="description">¿Qué te ha aportado esta parada?</label></p>
-                <textarea id="description" name="description" rows="5" placeholder="Ej. Aprendí a hacer un Hola Mundo muy feo..." required maxlength="1000"></textarea>
+                <p><label for="point-description">¿Qué te ha aportado esta parada?</label></p>
+                <textarea id="point-description" name="description" rows="5" placeholder="Ej. Aprendí a hacer un Hola Mundo muy feo..." required maxlength="1000"></textarea>
                 <p>Elige el estado: </p>
                 <input type="radio" id="state_done" name="state" value="done" required>
                 <label for="state_done">Terminado </label>
@@ -75,8 +75,8 @@
                 <input type="text" id="ubi" name="ubi" placeholder="Ej. Barcelona, Cataluña, España" maxlength="45">
                 <p><label for="fecha_nacimiento">¿Qué día naciste?</label></p>
                 <input type="date" id="fecha_nacimiento" name="fecha_nacimiento">
-                <p><label for="description_p">Cuéntanos algo más de tí</label></p>
-                <textarea id="description" name="description" rows="5" placeholder="Ej. Tus inquietudes, hobbies, objetivos futuros..." maxlength="1000"></textarea>
+                <p><label for="user-description">Cuéntanos algo más de tí</label></p>
+                <textarea id="user-description" name="description" rows="5" placeholder="Ej. Tus inquietudes, hobbies, objetivos futuros..." maxlength="1000"></textarea>
                 <p><label for="linkedin">LinkedIn:</label></p>
                 <input type="url" id="linkedin" name="linkedin" placeholder="https://www.linkedin.com/in/holamundo" maxlength="45">
                 <p><label for="git">GitHub:</label></p>
