--- a/HTML/login.html
+++ b/HTML/login.html
@@ -15,7 +15,7 @@
           <h2>YourPath</h2>
           <div class="underline-title"></div>
         </div>
-        <form class="form">
+        <form class="form" onsubmit="return false">
           <label for="user-email" style="padding-top: 13px">
             &nbsp;Email
           </label>
@@ -42,7 +42,7 @@
           <a href="#">
             <legend id="forgot-pass">Forgot password?</legend>
           </a>
-          <input id="submit-btn" type="button" name="submit" value="LOG IN" />
+          <input id="submit-btn" type="submit" name="submit" value="LOG IN" />
         </form>
         <div class="separador">
             <div class="separador-content">
@@ -86,5 +86,9 @@
       </p></div>
       <div class="derechos"><p>© 2022 YourPath, S.A. Todos los derechos reservados en todo el mundo</p></div>
   </footer>
+  <script src="https://code.jquery.com/jquery-3.6.1.min.js"
+    integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
+  <script type="module" src="../JavaScript/LoginUsefulness.js"></script>
+  <script type="module" src="../JavaScript/Modules/APIConsultor.js"></script>
   </body>
 </html>
