--- a/HTML/perfil.html
+++ b/HTML/perfil.html
@@ -39,10 +39,10 @@
         </div>
         <div class="datos">
             <ul>
-                <li>NOMBRE COMPLETO</li>
-                <li>FECHA NACIMIENTO</li>
-                <li>NUMERO TLF</li>
-                <li>CORREO</li>
+                <li id="nameUser">NOMBRE COMPLETO</li>
+                <li id ="dateUser">FECHA NACIMIENTO</li>
+                <li id="telUser">NUMERO TLF</li>
+                <li id="emailUser">CORREO</li>
             </ul>
         </div>
         <div class="redes">
