--- a/HTML/register.html
+++ b/HTML/register.html
@@ -15,7 +15,7 @@
           <h2>YourPath</h2>
           <div class="underline-title"></div>
         </div>
-        <form method="post" class="form">
+        <form id="userForm" method="post" class="form">
           <label for="user-email" style="padding-top: 13px">
             &nbsp;Email
           </label>
