--- a/HTML/test.html
+++ b/HTML/test.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" /> 
+    <script src="../JavaScript/LocalStorage.js"></script>
     <title>Document</title>
-</head>
-<body>
-    <div id="app"></div>
-    <script type="module" src="../JavaScript/Modules/APIConsultor.js"></script>
-</body>
+  </head>
+  <body>
+    <div>
+      <input type="text" placeholder="Nombre" id="nombretxt" />
+      <button id="boton-guardar" onclick="store()" type="button">Guardar</button>
+    </div>
+  </body>
 </html>
