--- a/HTML/register.html
+++ b/HTML/register.html
@@ -27,6 +27,29 @@
             autocomplete="on"
             required
           />
+          <div class="form-border"></div><label for="user-name" style="padding-top: 13px">
+            &nbsp;Nombre
+          </label>
+          <input
+            id="user-name"
+            class="form-content"
+            type="text"
+            name="name"
+            autocomplete="on"
+            required
+          />
+          <div class="form-border"></div>
+          <label for="user-surname" style="padding-top: 13px">
+            &nbsp;Apellidos
+          </label>
+          <input
+            id="user-surname"
+            class="form-content"
+            type="text"
+            name="surname"
+            autocomplete="on"
+            required
+          />
           <div class="form-border"></div>
           <label for="user-password" style="padding-top: 22px"
             >&nbsp;Password
