Change Script Aplied

--- a/HTML/register.html
+++ b/HTML/register.html
@@ -116,5 +116,9 @@
       </p></div>
       <div class="derechos"><p>© 2022 YourPath, S.A. Todos los derechos reservados en todo el mundo</p></div>
   </footer>
+  <script src="https://code.jquery.com/jquery-3.6.1.min.js"
+    integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
+  <script type="module" src="../JavaScript/RegisterUsefulness.js"></script>
+  <script type="module" src="../JavaScript/Modules/APIConsultor.js"></script>
   </body>
 </html>
