min width a las paginas + foto base de peril

--- a/HTML/perfil.html
+++ b/HTML/perfil.html
@@ -35,7 +35,7 @@
     </nav>
     <div class="perfil">
         <div class="foto">
-            FOTO
+            <img src="../maquetacion/Perfil.png" alt="Foto de perfil" id="foto-perfil">
         </div>
         <div class="datos">
             <ul>
