html height min 100% + nuevo footer

--- a/HTML/login.html
+++ b/HTML/login.html
@@ -76,15 +76,17 @@
       </div>
     </div>
     <footer>
-      <div class="logo"><img src="../maquetacion/logo.png" alt="YourPath"></div>
-      <div class="follow"><p>Follow us   
-          <a href="#"><i class="fab fa-instagram"></i></a>
-          <a href="#"><i class="fab fa-twitter"></i></a>
-          <a href="#"><i class="fab fa-linkedin"></i></a>
-          <a href="#"><i class="fab fa-youtube"></i></a>
-          <a href="#"><i class="fab fa-facebook-f"></i></a>
-      </p></div>
-      <div class="derechos"><p>© 2022 YourPath, S.A. Todos los derechos reservados en todo el mundo</p></div>
+      <div class="footer">
+          <div class="logo"><img src="../maquetacion/logo.png" alt="YourPath"></div>
+          <div class="follow"><p>Follow us   
+              <a href="#"><i class="fab fa-instagram"></i></a>
+              <a href="#"><i class="fab fa-twitter"></i></a>
+              <a href="#"><i class="fab fa-linkedin"></i></a>
+              <a href="#"><i class="fab fa-youtube"></i></a>
+              <a href="#"><i class="fab fa-facebook-f"></i></a>
+          </p></div>
+          <div class="derechos"><p>© 2022 YourPath, S.A. Todos los derechos reservados en todo el mundo</p></div>
+      </div>
   </footer>
   <script src="https://code.jquery.com/jquery-3.6.1.min.js"
     integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
