--- a/HTML/home.html
+++ b/HTML/home.html
@@ -52,14 +52,16 @@
         </div>
     </div>
     <footer>
-        <div class="logo"><img src="../maquetacion/logo.png" alt="YourPath"></div>
-        <div class="follow"><p>Follow us   
-            <a href="#"><i class="fab fa-instagram"></i></a>
-            <a href="#"><i class="fab fa-twitter"></i></a>
-            <a href="#"><i class="fab fa-linkedin"></i></a>
-            <a href="#"><i class="fab fa-youtube"></i></a>
-            <a href="#"><i class="fab fa-facebook-f"></i></a>
-        </p></div>
-        <div class="derechos"><p>© 2022 YourPath, S.A. Todos los derechos reservados en todo el mundo</p></div>
+        <div class="footer">
+            <div class="logo"><img src="../maquetacion/logo.png" alt="YourPath"></div>
+            <div class="follow"><p>Follow us   
+                <a href="#"><i class="fab fa-instagram"></i></a>
+                <a href="#"><i class="fab fa-twitter"></i></a>
+                <a href="#"><i class="fab fa-linkedin"></i></a>
+                <a href="#"><i class="fab fa-youtube"></i></a>
+                <a href="#"><i class="fab fa-facebook-f"></i></a>
+            </p></div>
+            <div class="derechos"><p>© 2022 YourPath, S.A. Todos los derechos reservados en todo el mundo</p></div>
+        </div>
     </footer>
 </body>
