--- a/HTML/login.html
+++ b/HTML/login.html
@@ -71,7 +71,7 @@
             data-shape="rectangular"
             data-logo_alignment="left"
           ></div>
-          <a href="#" id="signup" onclick="register">Don't have account yet?</a>
+          <a href="../HTML/register.html" id="signup" onclick="register">Don't have account yet?</a>
         </form>
       </div>
     </div>
