--- a/HTML/perfil.html
+++ b/HTML/perfil.html
@@ -35,7 +35,6 @@
     </nav>
     <div class="perfil">
         <div class="foto">
-            <img src="../maquetacion/Perfil.png" alt="Foto de perfil" id="foto-perfil">
         </div>
         <div class="datos">
             <ul>
@@ -59,15 +58,17 @@
     <div id="timeline_c"></div>
     <div id="timeline_f"></div>
     <footer>
-        <div class="logo"><img src="../maquetacion/logo.png" alt="YourPath"></div>
-        <div class="follow"><p>Follow us   
-            <a href="#"><i class="fab fa-instagram"></i></a>
-            <a href="#"><i class="fab fa-twitter"></i></a>
-            <a href="#"><i class="fab fa-linkedin"></i></a>
-            <a href="#"><i class="fab fa-youtube"></i></a>
-            <a href="#"><i class="fab fa-facebook-f"></i></a>
-        </p></div>
-        <div class="derechos"><p>© 2022 YourPath, S.A. Todos los derechos reservados en todo el mundo</p></div>
+        <div class="footer">
+            <div class="logo"><img src="../maquetacion/logo.png" alt="YourPath"></div>
+            <div class="follow"><p>Follow us   
+                <a href="#"><i class="fab fa-instagram"></i></a>
+                <a href="#"><i class="fab fa-twitter"></i></a>
+                <a href="#"><i class="fab fa-linkedin"></i></a>
+                <a href="#"><i class="fab fa-youtube"></i></a>
+                <a href="#"><i class="fab fa-facebook-f"></i></a>
+            </p></div>
+            <div class="derechos"><p>© 2022 YourPath, S.A. Todos los derechos reservados en todo el mundo</p></div>
+        </div>
     </footer>
     <script src="https://code.jquery.com/jquery-3.6.1.min.js"
         integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
