Errores TODO Solucionades

--- a/HTML/editarPerfil.html
+++ b/HTML/editarPerfil.html
@@ -21,7 +21,7 @@
         </div>
         <div class="perfil_logo">
             <div class="img_logo"></div>
-            <div class="usuario">Nombre Apeliido Apellido</div>
+            <div id="edit-perfil-name-usuario" class="usuario">Nombre Apeliido Apellido</div>
             <div class="dropdown">
                 <button>≡</button>
                 <div class="dropdown-content">
