--- a/HTML/perfil.html
+++ b/HTML/perfil.html
@@ -47,10 +47,10 @@
         </div>
         <div class="redes">
             <div id="linkedin">
-                <a href="#"><i class="fab fa-linkedin"></i></a>
+                <a id="linkedin-link" target="_blank" href="#"><i class="fab fa-linkedin"></i></a>
             </div>
             <div id="github">
-                <a href="#"><i class="fab fa-github"></i></a>
+                <a id="git-link" target="_blank"href="#"><i class="fab fa-github"></i></a>
             </div>
         </div>
     </div>
